--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -483,7 +483,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJC - PureEQ v1.5.4</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJC - PureEQ v2.0.0</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -531,7 +531,7 @@
       <div class="advance-content" id="advanceContent">
     <!-- Speaker Section -->
     <div class="section">
-      <h3 style="color:#FFA500; font-size: 16px;">Speaker Filter Boost</h3>
+      <h3 style="color:#FFA500; font-size: 16px;">Speaker Filter Boost (REW filtering)</h3>
 
       <div class="slider-row">
         <div class="slider-half">
@@ -584,7 +584,7 @@
 
     <!-- Subwoofer Section -->
     <div class="section">
-      <h3 style="color:#FFA500; font-size: 16px;">Subwoofer Filter Boost</h3>
+      <h3 style="color:#FFA500; font-size: 16px;">Subwoofer Filter Boost (REW filtering)</h3>
 
       <div class="slider-row">
         <div class="slider-half">
@@ -751,7 +751,7 @@
       const toggleBtn = document.getElementById("toggleAll");
       if (toggleBtn) toggleBtn.textContent = "[ + ] Custom Filters";
       // ============================
-      // END Creat Dynamic Speaker PEQ
+      // END Create Dynamic Speaker PEQ
       // ============================
     }
     function extractAdy(event) {
